[FIX] <pro>Table: Fix the problem that the button and input box of the professional search bar are not aligned when the global configuration labelLayout is vertical. & [IMP] styles: Optimize the Card style and add some Modal style variables
.

--- a/components-pro/modal/style/index.less
+++ b/components-pro/modal/style/index.less
@@ -72,6 +72,10 @@
     border-radius: @border-radius-base @border-radius-base 0 0;
   }
 
+  &:not(.@{modal-prefix-cls}-border) .@{modal-prefix-cls}-header {
+    padding: @modal-no-border-header-padding;
+  }
+
   &-body {
     max-height: ~'calc(100vh - 1.2rem)';
     padding: @modal-body-padding;
