--- a/components/style/themes/css-vars.less
+++ b/components/style/themes/css-vars.less
@@ -906,6 +906,7 @@
   --modal-confirm-icon-padding: 0 0.16rem 0 0;
   --modal-confirm-icon-font-size: 0.24rem;
   --modal-confirm-icon-line-height: 1.5;
+  --modal-no-border-header-padding: var(--modal-header-padding);
   // Modal Basic
   --modal-basic-footer-padding: 0.12rem 0;
 
